fixed text overflow on distress-list

--- a/src/app/distress-list/distress-list.component.css
+++ b/src/app/distress-list/distress-list.component.css
@@ -1,3 +1,3 @@
 .card-body {
-  height: 120px;
+  height: 125px;
 }
